[package]
name = "bitkv-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
bytes = "1.11.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.49.0", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.22"

[dev-dependencies]
tempfile = "3.24.0"
